--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "url": "https://github.com/emNavi"
   },
   "devDependencies": {
+    "@types/ip": "^1.1.3",
+    "@types/node": "^24.5.2",
     "@vitejs/plugin-vue": "^4.4.1",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
@@ -28,13 +30,15 @@
     "@element-plus/icons-vue": "^2.3.1",
     "async-await-queue": "^2.1.4",
     "async-mutex": "^0.5.0",
-    "axios": "^1.7.9",
+    "axios": "^1.12.2",
     "dgram": "^1.0.1",
     "element-plus": "^2.9.5",
     "ip": "^2.0.1",
     "is-in-subnet": "^4.0.1",
-    "uuid": "^13.0.0",
-    "vue": "^3.3.8"
+    "tmp": "^0.2.5",
+    "uuid": "^8.3.2",
+    "vue": "^3.3.8",
+    "vue-filepond": "^7.0.4"
   },
   "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
 }
